@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="71"
+VERSION_BUILD="72"
 
 # $Log$
+#
+# BUILD : 1.3.0.72 (SVN)
+# BUGS  : 403
+# NOTES : Fixed crash on xmlrpc connection
 #
 # BUILD : 1.3.0.71 (SVN)
 # BUGS  : N/A
