@@ -19,6 +19,7 @@ Provided by Denora Stats Dev. <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+08/15 F Fixed crash on xmlrpc connection                          [#403]
 08/13 F [nefarious] Local kills are now detected                  [#404]
 08/13 F [bahamut] Local kills are now detected                    [#404]
 08/11 F [inspircd11] CAPAB support                                [ #00]
